@@ -1,5 +1,9 @@
 2014-04-18  Per Bothner  <per@bothner.com>
 
+	* CodeAttr.java (disAssembleWithFixups): Fix some logic bugs,
+	most critically in handling of FIXUP_CASE.
+	(processFixups): Add commented-out call to disAssembleWithFixups.
+
 	Support new Java8 constant pool entry types.
 	* ConstantPool.java (METHOD_HANDLE, METHOD_TYPE, INVOKE_DYNAMIC,
 	ANY_REF): New constants.
